modules/dxp/apps/osb/osb-customer/osb-portlet/docroot/support/2/css/_comments.scss
.add-comment-attachments {
	margin: 25px 10px;

	.file-label {
		margin: 5px;
	}
}

.comment-body {
	&.type-game-plan {
		background-color: $game-plan-comment;
	}

	pre {
		margin: 0;
		overflow: hidden;
		padding: 0;
		word-wrap: break-word;
	}
}

.comment-collapsed {
	&.ticket-comment {
		.comment-body {
			color: $info;
			display: inline;
			font-style: italic;
			height: 1.5em;
			margin: 0;
			overflow: hidden;
			text-overflow: ellipsis;
			white-space: nowrap;
			width: 100%;
			word-wrap: normal;

			&.rejected-comment-body {
				background-color: $error;
				color: $medium-gray;
			}

			&.type-game-plan {
				background-color: $game-plan-comment;
			}

			.comment-body-wrapper {
				width: 1200px;
			}
		}

		.permalink {
			display: none;
		}

		.post-date {
			color: $info;
		}

		.small-user-avatar {
			background-position: center;
			border-radius: 50%;
			display: block;
			filter: grayscale(100%);
			height: 30px;
			margin: 0 8px;
			opacity: 0.5;
			padding: 0;
			width: 30px;
		}

		.user-avatar {
			display: none;
		}

		.user-name span {
			color: $info;
			filter: grayscale(100%);
			font-family: "Avenir Book";
			font-size: 14px;

			.badge {
				opacity: 0.5;
			}
		}
	}

	div.post-date {
		display: none;
	}

	span.post-date {
		display: inline;
		font-family: "Avenir Book";
		font-size: 12px;
	}

	.code, .quote, .quote-content {
		display: inline;
	}

	.user-name {
		display: inline-block;

		.three-dot {
			display: none;
		}
	}
}

.comment-draft-border {
	border: 1px solid $error;
}

.comment-draft-hint {
	color: $urgent;
	font-size: 15px;
	font-weight: bold;
}

.comment-expanded, .comment-help, .preview {
	div.post-date {
		display: block;
	}

	span.post-date {
		display: none;
	}

	.code {
		background: none repeat scroll 0 0 #FFF;
		border: 1px solid $medium-gray;
		font-family: monospace;
		max-height: 180px;
		overflow-x: auto;
		white-space: pre;
	}

	.code-lines {
		border-right: 1px solid $border-color;
		color: #000;
		margin-right: 5px;
		padding: 0 5px;
	}

	.quote {
		background: url(@theme_image_path@/message_boards/quoteleft.png) no-repeat scroll left top #FFF;
		border: 1px solid $medium-gray;
		padding: 5px 0 0 5px;
	}

	.quote-content {
		background: url(@theme_image_path@/message_boards/quoteright.png) no-repeat scroll right bottom;
		padding: 5px 30px 10px;
		word-wrap: break-word;
	}

	.small-user-avatar {
		display: none;
	}
}

.comment-footer {
	padding: 0 10px;

	table {
		margin-bottom: 3px;
	}
}

.comment-help {
	margin: 0 10px;

	table {
		background-color: #FFF;
		margin-bottom: 0;
	}

	td {
		border: 1px solid black;
		padding: 10px;
		vertical-align: middle;
	}

	th {
		border: 1px solid black;
		padding: 10px;
		text-align: center;
	}

	.col-2 {
		text-align: center;
	}

	.first {
		width: 40%;
	}
}

.comment-pending {
	text-align: right;

	.input-checkbox-wrapper {
		display: inline-block;

		input {
			vertical-align: text-top;
		}

		label {
			font-weight: normal;
		}
	}
}

.comment-scroll {
	background-color: $light-bg;
}

.editor {
	margin: 10px;

	&.edit {
		.edit-icon, .preview-container {
			display: none;
		}
	}

	&.loading .preview-container {
		background-image: url(@theme_image_path@/application/loading_indicator.gif);
		background-position: center center;
		background-repeat: no-repeat;
	}

	&.preview {
		.bb-code-icons {
			a {
				opacity: 0.4;
				pointer-events: none;
			}

			.edit-icon a {
				filter: none;
				opacity: 1;
				pointer-events: auto;
			}
		}

		.body, .preview-icon {
			display: none;
		}
	}

	textarea {
		border: 1px solid $border-color;
		border-radius: 0;
		height: 250px;
		margin-top: 0;
		padding: 5px 10px;
		width: 100%;
	}

	.body {
		box-sizing: border-box;
	}

	.lfr-toolbar {
		background: transparent;
		position: relative;

		.bb-code-icons {
			position: absolute;
			top: 5px;

			.lfr-button {
				float: none;
			}
		}

		.lfr-button {
			border: 1px solid transparent;
		}
	}

	.preview-container {
		background-color: $light-bg;
		border: 1px solid $medium-gray;
		margin-top: 0;
		padding: 10px;
	}
}

.history {
	a {
		text-decoration: none;
	}

	pre {
		margin: 0;
		padding: 0;
	}

	.audit-entry-set {
		margin: 15px 0;
		overflow: hidden;

		.content {
			margin: 5px;
		}

		.create-date {
			color: $info;
			font-size: 12px;
		}

		.summary {
			font-style: italic;
		}

		.user-name {
			float: left;
			margin: 0 0 0 5px;
		}

		.user-profile-image {
			margin-right: 0;

			img {
				height: 20px;
				width: 20px;
			}
		}
	}
}

.lfr-toolbar {
	padding: 1px;
	width: 99%;

	.edit-icon, .preview-icon {
		a {
			float: right;
		}
	}
}

.ticket-comment {
	clear: both;
	padding: 10px 5px;

	&.comment-scroll {
		background-color: $dashboard-bg;
		border-radius: 3px;
	}

	.comment-text-container {
		float: left;
		width: calc(100% - 70px);

		.comment-body {
			margin: 10px 0;
		}

		.permalink {
			float: right;
		}

		.post-date {
			color: $medium-gray;
			font-family: "Avenir Medium";
		}

		.user-name span {
			color: $primary-blue;
			font-family: "Avenir Medium";
			font-size: 16px;
		}
	}
}

.type-solution {
	background-color: $comment-type-bg;

	.solution-flag {
		display: block;
	}
}

